Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127168

Memory Leak: Windows: Result of SetupDiGetClassDevs() is not freed

XMLWordPrintable

    • Windows
    • 5183ca143 (dev), e90a61ca4 (6.8), 72b2d488f (6.7), fcaaebd5c (dev), 28e8a377f (6.8), ebb51bd9d (6.7), 0e41c8267 (tqtc/lts-6.5), b4545b6b2 (tqtc/lts-6.5)

      "qtbase/src/plugins/platforms/windows/qwindowsscreen.cpp":

      setMonitorDataFromSetupApi() function uses SetupDiGetClassDevs() to get a devInfo, but does not call SetupDiDestroyDeviceInfoList() to free the devInfo.

       

      https://learn.microsoft.com/en-us/windows/win32/api/setupapi/nf-setupapi-setupdigetclassdevsw

      "The caller of SetupDiGetClassDevs must delete the returned device information set when it is no longer needed by calling SetupDiDestroyDeviceInfoList."

        For Gerrit Dashboard: QTBUG-127168
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            nodir.temir Nodir Temirkhodjaev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: