qwindowsscreen.cpp: Fix memory leak of SetupDiGetClassDevs()

Use SetupDiDestroyDeviceInfoList() to delete the returned device information set.

Fixes: QTBUG-127168
Pick-to: 6.5
Change-Id: I810e0f284e0d53d9b84d8c64022e566d6b740ab4
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 5183ca14344c04015b32ef407e4cdad1b370c841)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e90a61ca49603a1e3eb99fc994d83cb6636ef48a)